sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:8: error: not found: value l
      if (getCouleur(l)==Color.red){
                     ^DutchFlagAlgo:9: error: not found: value l
        echange(l,blancRouge)
                ^DutchFlagAlgo:12: error: not found: value l
    if (getCouleur(l)==Color.blue){
                   ^DutchFlagAlgo:14: error: not found: value l
      l=l+1
      ^DutchFlagAlgo:16: error: not found: value l
    if (getCouleur(l)==Color.white){
                   ^DutchFlagAlgo:17: error: not found: value l
      echange(l,avantBlanc)
              ^