sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var ligne=0
  var apresBleu=0
  var avantBlanc=getTaille()-1
  var blancRouge=getTaille()-1
  while(!estTrie){
      if (getCouleur(l)==Color.red){
        echange(l,blancRouge)
        blancRouge=blancRouge-1
      }
    if (getCouleur(l)==Color.blue){
      apresBleu=apresBleu+1
      l=l+1
    }
    if (getCouleur(l)==Color.white){
      echange(l,avantBlanc)
      avantBlanc=avantBlanc-1
    }
  }
}